--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>BoostCom</title>
+    <link rel="icon" type="image/x-icon" th:href="@{/img/logoic.png}">
+    <link th:href="@{/css/nav.css}" rel="stylesheet">
+    <link th:href="@{/css/footer.css}" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 </head>
 <body>
+
+<ul>
+    <li><a class="active" href="/">Home</a></li>
+    <li><a href="#">Contracts</a></li>
+    <li><a href="#">Providers</a></li>
+    <li><a href="#">Channels</a></li>
+    <li style="float:right; font-weight: bold;"><a href="/user/register">Register</a></li>
+    <li style="float:right; font-weight: bold;"><a href="/user/login">Log in</a></li>
+
+</ul>
+<img style="width:250px;display:block;
+  margin-left: auto;
+  margin-right: auto;" th:src="@{/img/boostcomLogo.png}"   alt="img"/>
+<div class="jumbotron" style="background-color:#e6f7ff; position:absolute;
+   top:180px; margin-left: 80px;">
+    <h1 class="display-4">BoostCom Cable Services</h1>
+    <p class="lead">Тhe best in the industry</p>
+    <hr class="my-4">
+    <p style="font-weight: bold;">Choose one of our many advantageous offers, with which you can enjoy a wide
+        selection of channels and channel packages of all categories.      </p>
+    <p class="lead">
+        <a class="btn btn-primary btn-lg" href="#" role="button">Choose Offer</a>
+    </p>
+</div>
+
+<footer>
+    <p>Author: Petar Krastev</p>
+    <p>BoostCom @2022</p>
+
+</footer>
 
 </body>
 </html>
