Login and Registration implementation 1/3

--- a/src/main/resources/static/css/nav.css
+++ b/src/main/resources/static/css/nav.css
@@ -26,8 +26,13 @@ li a {
     text-decoration: none;
 }
 
+li a:hover{
+    text-decoration: none;
+}
+
 li a:hover:not(.active) {
     background-color: #4da6ff;
+    text-decoration: none;
 }
 
 .active {
