--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<ul>
+<ul style="text-decoration: none">
     <li><a class="active" href="/">Home</a></li>
     <li><a href="#">Contracts</a></li>
     <li><a href="#">Providers</a></li>
