Database and Entity's Refactoring

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -14,6 +14,7 @@
     <li><a href="#">Contracts</a></li>
     <li><a href="#">Providers</a></li>
     <li><a href="#">Channels</a></li>
+    <li><a href="#">Packets</a></li>
     <li style="float:right; font-weight: bold;">
         <a class="active" href="/user/register">Register</a></li>
     <li style="float:right; font-weight: bold;">
