--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,6 +15,7 @@
     <li><a href="#">Contracts</a></li>
     <li><a href="#">Providers</a></li>
     <li><a href="#">Channels</a></li>
+    <li><a href="#">Packets</a></li>
     <li style="float:right; font-weight: bold;">
         <a href="/user/register">Register</a></li>
     <li style="float:right; font-weight: bold;">
