--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -11,7 +11,7 @@
 <body>
 <ul>
     <li><a href="/">Home</a></li>
-    <li><a href="#">Contracts</a></li>
+    <li><a href="/contracts/selection">Contracts</a></li>
     <li><a href="#">Providers</a></li>
     <li><a href="#">Channels</a></li>
     <li><a href="#">Packets</a></li>
