--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 
 <ul style="text-decoration: none">
     <li><a class="active" href="/">Home</a></li>
-    <li><a href="#">Contracts</a></li>
+    <li><a href="/contracts/selection">Contracts</a></li>
     <li><a href="#">Providers</a></li>
     <li><a href="#">Channels</a></li>
     <li><a href="#">Packets</a></li>
@@ -22,9 +22,12 @@
     <li style="float:right; font-weight: bold;"><a href="/user/login">Log in</a></li>
 
 </ul>
+
 <img style="width:250px;display:block;
   margin-left: auto;
   margin-right: auto;" th:src="@{/img/boostcomLogo.png}"   alt="img"/>
+
+
 <div class="jumbotron" style="background-color:#e6f7ff; position:absolute;
    top:180px; margin-left: 80px;">
     <h1 class="display-4">BoostCom Cable Services</h1>
