--- a/src/main/resources/templates/contract-select.html
+++ b/src/main/resources/templates/contract-select.html
@@ -24,7 +24,7 @@
   margin-left: auto;
   margin-right: auto;" th:src="@{/img/boostcomLogo.png}"   alt="img"/>
 <a href="/contracts/provider/add"><button>New Provider Contract</button></a>
-<button style="width: 230px">  New User Contract  </button>
+<a href="/contracts/user/add"><button style="width: 230px">  New User Contract  </button></a>
 
 
 </body>
