--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,7 +36,7 @@
     <p style="font-weight: bold;">Choose one of our many advantageous offers, with which you can enjoy a wide
         selection of channels and channel packages of all categories.      </p>
     <p class="lead">
-        <a class="btn btn-primary btn-lg" href="#" role="button">Choose Offer</a>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Sign a Contract</a>
     </p>
 </div>
 
