--- a/src/main/resources/static/css/forms.css
+++ b/src/main/resources/static/css/forms.css
@@ -24,11 +24,12 @@ input[type=text], input[type=password] {
     box-sizing: border-box;
 }
 
-form {border: 3px solid #f1f1f1;
+form {
+    border: 3px solid #f1f1f1;
     text-align: center;
     background-color: #cce6ff;
     max-width:400px;
-    margin: 100px auto;
+    margin: 10px 20px;
 
 }
 label {
