--- a/src/main/resources/templates/contract-select.html
+++ b/src/main/resources/templates/contract-select.html
@@ -12,7 +12,7 @@
 
 <ul style="text-decoration: none">
     <li><a href="/">Home</a></li>
-    <li><a class="active" href="/contracts/selection">Contracts</a></li>
+    <li><a class="active"  href="/contracts/selection">Contracts</a></li>
     <li><a href="#">Providers</a></li>
     <li><a href="#">Channels</a></li>
     <li><a href="#">Packets</a></li>
@@ -23,9 +23,8 @@
 <img style="width:250px;display:block;
   margin-left: auto;
   margin-right: auto;" th:src="@{/img/boostcomLogo.png}"   alt="img"/>
-<a href="/contracts/provider/add"><button>New Provider Contract</button></a>
-<a href="/contracts/user/add"><button style="width: 230px">  New User Contract  </button></a>
-
+<a href="/contracts/provider"><button style="width: 230px"> Provider Contract</button></a>
+<a href="/contracts/user"><button style="width: 230px">  User Contract  </button></a>
 
 </body>
 </html>
