--- a/src/main/resources/templates/add-provider-contract.html
+++ b/src/main/resources/templates/add-provider-contract.html
@@ -24,7 +24,8 @@
 </ul>
 
 <form th:action="@{/contracts/provider/add}"
- th:object="${contractProviderBindingDto}" method="POST">
+ th:object="${contractProviderBindingDto}" method="POST" style="margin-left: auto;
+  margin-right: auto;margin-top: 100px;">
     <label style="font-size: 15px"><b>Provider Contract:</b></label><br><br>
 <label style="margin-top: 40px"><b>Provider Name</b></label>
 <input type="text" placeholder="Enter Provider Name" th:field="*{providerName}">
