--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -21,7 +21,8 @@
         <a href="/user/login">Log in</a></li>
 </ul>
 
-<form th:action="@{/user/register}" th:object="${userRegisterDto}" method="POST">
+<form th:action="@{/user/register}" th:object="${userRegisterDto}" method="POST" style="margin-left: auto;
+  margin-right: auto;margin-top: 100px;">
 
         <label><b>E-Mail</b></label>
         <input type="text" placeholder="Enter E-Mail" th:field="*{email}"  >
