--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -13,8 +13,8 @@
     <li><a href="/">Home</a></li>
     <li><a href="/contracts/selection">Contracts</a></li>
     <li><a href="#">Providers</a></li>
-    <li><a href="#">Channels</a></li>
-    <li><a href="#">Packets</a></li>
+    <li><a href="/channels/view">Channels</a></li>
+    <li><a href="/packets/all">Packets</a></li>
     <li style="float:right; font-weight: bold;">
         <a class="active" href="/user/register">Register</a></li>
     <li style="float:right; font-weight: bold;">
