--- a/src/main/resources/templates/add-provider-contract.html
+++ b/src/main/resources/templates/add-provider-contract.html
@@ -15,12 +15,11 @@
 <ul style="text-decoration: none">
     <li><a href="/">Home</a></li>
     <li><a class="active" href="/contracts/selection">Contracts</a></li>
-    <li><a href="#">Providers</a></li>
     <li><a href="/channels/view">Channels</a></li>
     <li><a href="/packets/all">Packets</a></li>
     <li style="float:right; font-weight: bold;"><a href="/user/register">Register</a></li>
     <li style="float:right; font-weight: bold;"><a href="/user/login">Log in</a></li>
-
+    <li style="float:right; background-color:#ff0000"><a href="/user/all">Admin Panel</a></li>
 </ul>
 
 <form th:action="@{/contracts/provider/add}"
@@ -35,11 +34,11 @@
     <label><b>Chanel</b></label>
     <input type="text" placeholder="Enter Channel Name" th:field="*{channels}"><br>
     <label><b>Category</b></label>
-    <select name="categorys">
+    <select name="category">
         <option disabled selected value> -- select a category -- </option>
         <option th:each="anCategory: ${categories}"
-                th:text="${anCategory}"
                 th:value="${anCategory}"
+                th:text="${anCategory}"
                 th:selected="${anCategory} == *{category}">
             Category
         </option>
@@ -52,7 +51,7 @@
     <input type="text" placeholder="Enter Channel Name" th:field="*{channels}">
 
     <label><b>Category</b></label>
-    <select name="categorys">
+    <select name="category">
         <option disabled selected value> -- select a category -- </option>
         <option th:each="anCategory: ${categories}"
                 th:text="${anCategory}"
