--- a/src/main/resources/templates/contract-select.html
+++ b/src/main/resources/templates/contract-select.html
@@ -13,11 +13,11 @@
 <ul style="text-decoration: none">
     <li><a href="/">Home</a></li>
     <li><a class="active"  href="/contracts/selection">Contracts</a></li>
-    <li><a href="#">Providers</a></li>
     <li><a href="/channels/view">Channels</a></li>
     <li><a href="/packets/all">Packets</a></li>
     <li style="float:right; font-weight: bold;"><a href="/user/register">Register</a></li>
     <li style="float:right; font-weight: bold;"><a href="/user/login">Log in</a></li>
+    <li style="float:right; background-color:#ff0000"><a href="/user/all">Admin Panel</a></li>
 
 </ul>
 <img style="width:250px;display:block;
