--- a/src/main/resources/templates/packets-list.html
+++ b/src/main/resources/templates/packets-list.html
@@ -13,15 +13,18 @@
 <ul style="text-decoration: none">
     <li><a href="/">Home</a></li>
     <li><a href="/contracts/selection">Contracts</a></li>
-    <li><a href="#">Providers</a></li>
     <li><a href="/channels/view">Channels</a></li>
     <li><a class="active" href="/packets/all">Packets</a></li>
     <li style="float:right; font-weight: bold;"><a href="/user/register">Register</a></li>
     <li style="float:right; font-weight: bold;"><a href="/user/login">Log in</a></li>
+    <li style="float:right; background-color:#ff0000"><a href="/user/all">Admin Panel</a></li>
 
 </ul>
 
 
+<form action="#" method="GET" style="position: absolute; top: 148px;left:62%;">
+    <button type="submit">Create Packet</button>
+</form>
 <table style="margin-top:200px">
     <tr>
         <th>Packet</th>
