--- a/src/main/resources/templates/user-list.html
+++ b/src/main/resources/templates/user-list.html
@@ -24,16 +24,23 @@
 
 <table style="margin-top:200px">
     <tr>
-        <th>Channel</th>
-        <th>Category</th>
-        <th>Price</th>
+        <th>User</th>
+        <th>E-Mail</th>
+        <th>Role</th>
+
 
     </tr>
-    <tr th:each ="channel : ${channels}">
-        <td th:text="${channel.channelName}"></td>
-        <td th:text="${channel.channelCategoryEnum}"></td>
-        <td th:text="${channel.price}+' лв'"></td>
-
+    <tr th:each ="user : ${users}">
+        <td th:text="${user.username}"></td>
+        <td th:text="${user.email}"></td>
+        <td><table style="border: none;width: 50%">
+            <tr th:each ="role : ${user.roles}">
+                <td th:text="${role.role}"><a th:href="'/'+ ${user.id}"></a></td>
+            </tr>
+        </table>
+        </td>
+        <td><a th:href="'/' + ${user.id}" style="color: red">✏</a></td>
+        <td><a th:href="'/' + ${user.id}">🗑️</a></td>
     </tr>
 </table>
 </body>
