--- a/src/main/resources/templates/packets-list.html
+++ b/src/main/resources/templates/packets-list.html
@@ -22,7 +22,7 @@
 </ul>
 
 
-<form action="#" method="GET" style="position: absolute; top: 148px;left:62%;">
+<form action="/packets/add" method="GET" style="position: absolute; top: 148px;left:62%;">
     <button type="submit">Create Packet</button>
 </form>
 <table style="margin-top:200px">
