--- a/src/main/resources/templates/provider-contract-list.html
+++ b/src/main/resources/templates/provider-contract-list.html
@@ -22,10 +22,10 @@
 </ul>
 
 
-<form action="/contracts/provider/add" method="GET" style="position: absolute; top: 130px;left:65%;">
+<form action="/contracts/provider/add" method="GET" style="position: absolute; top: 132px;left:79%;">
     <button type="submit">New Provider Contract</button>
 </form>
-<table style="margin-top:200px">
+<table style="margin-top:200px;width: 1100px">
     <tr>
         <th>Provider</th>
         <th>Contract Price</th>
