Delete option impl

--- a/src/main/resources/templates/packets-list.html
+++ b/src/main/resources/templates/packets-list.html
@@ -49,7 +49,7 @@
         </td>
         <td th:text="' лв'"></td>
         <td><a th:href="'/' + ${packet.id}" style="color: red">✏</a></td>
-        <td><a th:href="'/' + ${packet.id}">🗑️</a></td>
+        <td><a th:href="@{/packets/delete/{id}(id=${packet.id})}">🗑️</a></td>
 
     </tr>
 </table>
