--- a/src/main/resources/templates/user-contract-list.html
+++ b/src/main/resources/templates/user-contract-list.html
@@ -45,7 +45,8 @@
                 <td th:text="${contract.dateStarted}"></td>
                 <td th:text="${contract.dateExpire}"></td>
                 <td><a th:href="'/' + ${contract.id}" style="color: red">✏</a></td>
-                <td><a th:href="'/' + ${contract.id}">🗑️</a></td>
+                <td><a th:href="@{/contracts/user/delete/{id}(id=${contract.id})}">🗑️</a></td>
+
             </tr>
         </table>
  </table>
