--- a/src/main/resources/templates/packets-list.html
+++ b/src/main/resources/templates/packets-list.html
@@ -48,7 +48,7 @@
         </table>
         </td>
         <td th:text="${packet.priceOfPacket()}+' лв'"></td>
-        <td><a th:href="'/' + ${packet.id}" style="color: red">✏</a></td>
+        <td><a th:href="@{/packets/update/{id}(id=${packet.id})}" style="color: red">✏</a></td>
         <td><a th:href="@{/packets/delete/{id}(id=${packet.id})}">🗑️</a></td>
 
     </tr>
